# practical_gpu_graphics_with_wgpu_and_rust

./: Cargo.toml
examples/ch03/: common.rs  point_line.rs  point_line.wgsl  triangles.rs  triangles.wgsl
examples/ch04/: triangle.rs
examples/ch05/: scaling.rs  view_projection.rs
examples/ch06/: cube_face_color.rs  cube_face_color.wgsl  cube_vertex_color.rs  line3d.rs  line3d.wgsl
examples/common/: transforms.rs  vertex_data.rs
